Finish init MVT

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -3,7 +3,7 @@
 {% load socialaccount %}
 
 {% block head_content %}
-<title>Platzigram sign in</title>
+<title>SINGER sign in</title>
 {% endblock%}
 
 {% block container %}
