--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -3,7 +3,7 @@
 {% load socialaccount %}
 
 {% block head_content %}
-<title>Platzigram sign up</title>
+<title>SINGER sign up</title>
 {% endblock %}
 
 {% block container %}
