--- a/templates/users/base.html
+++ b/templates/users/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    {% block head_content %}{% endblock %}
+    {% block head_content %} {% endblock %}
 
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -16,7 +16,7 @@
         <div class="row h-100 justify-content-center align-items-center">
             <div class="col-sm-12 col-md-5 col-lg-5 pt-2 pl-5 pr-5 pb-5" id="auth-container">
 
-                <img src="{% static "img/instagram.png" %}" class="img-fluid rounded mx-auto d-block pb-4" style="max-width: 60%;">
+                <img src="{% static "img/singer.png" %}" class="img-fluid rounded mx-auto d-block pb-4" style="max-width: 60%;">
 
                 {% block container %}{% endblock%}
 
