Final view adapt

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,52 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" crossorigin="anonymous" />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
 
+    
+
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Bootstrap 4x -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <style>
+        .cont-opt-denuncia {
+            width: 60%;
+            margin-left: 20%;
+            padding-left: 10%;
+            margin-bottom: 20px;
+        }
+
+        .cont-btns {
+            width: 10em;
+            margin-left: 150px;
+        }
+
+        .s3 {
+            text-align: center;
+        }
+
+        .cont-titulos {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .description-denun {
+            text-align: justify;
+        }
+
+        .fiexd-btn-menu {
+            /* transform: translate(0, 100%); */
+            display: flex;
+            margin-top: 9px;
+            margin-bottom: -65px;
+        }
+    </style>
+
 </head>
-<body>
+<body class="overflow: hidden;">
 
     {% include "nav.html" %}
 
