--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,37 +1,109 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg fixed-top" id="main-navbar">
+
     <div class="container">
+        <div class="section">
+            <div class="fiexd-btn-menu">
+                <a class="btn-small sidenav-trigger" data-target="menu-side">
+                    <i class="large material-icons">menu</i>
+                </a>
+            </div>
 
-        <a class="navbar-brand pr-5" style="border-right: 1px solid #efefef;" href="{% url "posts:feed" %}">
-            <img src="{% static "img/singer.png" %}" height="45" class="d-inline-block align-top"/>
-        </a>
+            <ul class="sidenav" id="menu-side">
 
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
+                <li>
+                    <div class="user-view">
 
-                <li class="nav-item">
+                        <a href="{% url "users:detail" request.user.username %}">
+                            {% if request.user.profile.picture %}
+                                <img src="{{ request.user.profile.picture.url }}" alt="" class="circle"/>
+                            {% else%}
+                                <img src="{% static 'img/default-profile.png' %}" alt="" class="circle"/>
+                            {% endif %}
+                          </a>
+                    </div>
+                </li>
+
+                <li>
                     <a href="{% url "users:detail" request.user.username %}">
-                        {% if request.user.profile.picture %}
-                            <img src="{{ request.user.profile.picture.url }}" height="35" class="d-inline-block align-top rounded-circle"/>
-                        {% else%}
-                            <img src="{% static 'img/default-profile.png' %}" height="35" class="d-inline-block align-top rounded-circle"/>
-                        {% endif %}
+                        <i class="material-icons">Profile</i> Perfil
                     </a>
                 </li>
 
-                <li class="nav-item nav-icon">
+                <li>
+                    <a href="{% url "posts:feed" %}">
+                        <i class="material-icons">home</i> Inicio
+                    </a>
+                </li>
+
+                <li>
                     <a href="{% url "posts:create" %}">
-                        <i class="fas fa-plus"></i>
+                        <i class="material-icons">public</i> Denuncias
                     </a>
                 </li>
 
-                <li class="nav-item nav-icon">
+                <li>
+                    <a href="#">
+                        <i class="material-icons">add_comment</i> Explorar
+                    </a>
+                </li>
+                <li>
+                    <div class="divider"></div>
+                </li>
+                <li>
+                    <a href="{% url "users:update" %}">
+                        <i class="material-icons">settings</i> Editar cuenta
+                    </a>
+                </li>
+                <li>
                     <a href="{% url "users:logout" %}">
-                        <i class="fas fa-sign-out-alt"></i>
+                        <i class="material-icons">exit_to_app</i> Cerrar Sesion
                     </a>
                 </li>
-
+                <li>
+                    <div class="divider"></div>
+                </li>
+                <li>
+                    <a href="#">
+                         Informacion
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Politica de privacidad
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                         Condiciones de uso
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
+
+
+
+
+    <!-- JavaScript Materialize css-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- JavaScrit bootstrap 4x  -->
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
+
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+
+            var elems = document.querySelectorAll('.sidenav');
+            var instances = M.Sidenav.init(elems);
+
+            var elems = document.querySelectorAll('.slider');
+            var instances = M.Slider.init(elems, {});
+
+            var elems = document.querySelectorAll('.materialboxed');
+            var instances = M.Materialbox.init(elems);
+
+        });
+    </script>
 </nav>
