--- a/templates/posts/feed.html
+++ b/templates/posts/feed.html
@@ -6,14 +6,58 @@
 
 {% block container %}
 
-    <div class="container">
+<div class="cabezera">
+
         <div class="row">
 
+
+            <div class="col s12">
+
+                <div class="slider">
+                    <ul class="slides">
+
+                        <li>
+                            <img src="../static/img/Wallpapers-oscuros.jpg" alt="">
+                            <div class="caption center-align">
+                                <h3>Lorem, ipsum dolor.</h3>
+                                <h5 class="light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, praesentium.</h5>
+                            </div>
+                        </li>
+
+                        <li>
+                            <img src="../static/img/s3.jpg" alt="">
+                            <div class="caption right-align">
+                                <h3>Lorem, ipsum dolor.</h3>
+                                <h5 class="light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, praesentium.</h5>
+                            </div>
+                        </li>
+
+
+                        <li>
+                            <img src="../static/img/405537.jpg" alt="">
+                            <div class="caption left-align">
+                                <h3>Lorem, ipsum dolor.</h3>
+                                <h5 class="light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, praesentium.</h5>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="container">
+        <div class="row">
             {% for post in posts %}
                 {% include "posts/post_card.html" %}
             {% endfor %}
         </div>
     </div>
+
 
     {% include "pagination.html" %}
 
