--- a/templates/posts/post_card.html
+++ b/templates/posts/post_card.html
@@ -1,21 +1,31 @@
-<div class="col-sm-12 col-md-8 offset-md-2 mt-5 p-0 post-container">
-    <div class="media pt-3 pl-3 pb-1">
-        <a href="{% url "users:detail" post.user.username %}">
-            <img class="mr-3 rounded-circle" height="35" src="{{ post.profile.picture.url }}" alt="{{ post.user.get_full_name }}">
-        </a>
-        <div class="media-body">
-            <p style="margin-top: 5px;">{{ post.user.get_full_name  }}</p>
-        </div>
-    </div>
+{% load static %}
 
+<div class="center-block">
+  <div class="row cont-titulos">
+      <div class="col s3"><p class="text-left">{{ post.categories }}</p></div>
+      <div class="col s3"><p class="text-center">{{ post.title }}</p></div>
+      <div class="col s3"><p class="text-right">{{ post.user.get_full_name  }}</p></div>
+  </div>
+  <div class="card mb-4 box-shadow">
     <img style="width: 100%;" src="{{ post.photo.url }}" alt="{{ post.title }}">
+      <div class="card-body">
+        <p class="card-text">{{ post.description }}</p>
+        <a href="{% url "posts:detail" post.pk %}" style="color: #000; font-size: 20px;">
+            <i class="far fa-hand-rock"></i>
+        </a> 3000
+        <p></p>
+        <h2>COMENTARIOS<h2>
 
-    <p class="mt-1 ml-2" >
-        <a href="" style="color: #000; font-size: 20px;">
-            <i class="far fa-heart"></i>
-        </a> 30 likes
-    </p>
-    <p class="ml-2 mt-0 mb-2">
-        <b>{{ post.title }}</b> - <small>{{ post.created }}</small>
-    </p>
+        <p>Esta increible esa idea, no crei que eso pasara en colombia</p>
+        <textarea class="form-control counted" name="message" placeholder="Digite uma mensagem" rows="5" style="margin-bottom:10px;"></textarea>
+        <h6 class="pull-right" id="counter">320 characters remaining</h6>
+        <button class="btn btn-info" type="submit">Comentar</button>
+        <div class="d-flex justify-content-between align-items-center">
+        <small class="text-muted">{{ post.city }}</small>
+        <small class="text-muted">{{ post.created }}</small>
+
+      </div>
+    </div>
+  </div>
+  </div>
 </div>
