--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -10,8 +10,9 @@
 
     <form action="{% url 'users:signup' %}" method="POST">
         {% csrf_token %}
-
+        <form method="POST" enctype="multipart/form-data">
         {{ form.as_p }}
+        </form>
 
         <button class="btn btn-secondary btn-block mt-5" type="submit">Register!</button>
         <a class="btn btn-primary btn-block" href="{% provider_login_url "facebook" method="oauth2" %}">
