--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -15,7 +15,9 @@
                     alt="@{{ user.username}}"
                     class="rounded-circle"
                     width="150px"
+                    height="150px"
                 />
+
             </div>
 
             <div class="col-sm-8">
