--- a/templates/posts/post_card.html
+++ b/templates/posts/post_card.html
@@ -2,9 +2,9 @@
 
 <div class="center-block">
   <div class="row cont-titulos">
-      <div class="col s3"><p class="text-left">{{ post.categories }}</p></div>
-      <div class="col s3"><p class="text-center">{{ post.title }}</p></div>
-      <div class="col s3"><p class="text-right">{{ post.user.get_full_name  }}</p></div>
+      <div class="col s3"><h2 class="text-left">{{ post.categories }}</h2></div>
+      <div class="col s3"><h6 class="text-center"><a href="">{{ post.title }}</a></h6></div>
+      <div class="col s3"><h3 class="text-right"><a href=""{% url "users:detail" post.user.username %}"">{{post.user.get_full_name}}</a></h3></div>
   </div>
   <div class="card mb-4 box-shadow">
     <img style="width: 100%;" src="{{ post.photo.url }}" alt="{{ post.title }}">
@@ -14,8 +14,9 @@
             <i class="far fa-hand-rock"></i>
         </a> 3000
         <p></p>
+        <div>
         <h2>COMENTARIOS<h2>
-
+        </div>
         <p>Esta increible esa idea, no crei que eso pasara en colombia</p>
         <textarea class="form-control counted" name="message" placeholder="Digite uma mensagem" rows="5" style="margin-bottom:10px;"></textarea>
         <h6 class="pull-right" id="counter">320 characters remaining</h6>
