last repo (May be)

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -37,13 +37,13 @@
 
                 <li>
                     <a href="{% url "posts:create" %}">
-                        <i class="material-icons">public</i> Denuncias
+                        <i class="material-icons">public</i> Reporta!
                     </a>
                 </li>
 
                 <li>
                     <a href="#">
-                        <i class="material-icons">add_comment</i> Explorar
+                        <i class="material-icons">add_comment</i> Pedagogía
                     </a>
                 </li>
                 <li>
