--- a/templates/posts/post_card.html
+++ b/templates/posts/post_card.html
@@ -3,23 +3,23 @@
 <div class="center-block">
   <div class="row cont-titulos">
       <div class="col s3"><h2 class="text-left">{{ post.categories }}</h2></div>
-      <div class="col s3"><h6 class="text-center"><a href="">{{ post.title }}</a></h6></div>
-      <div class="col s3"><h3 class="text-right"><a href=""{% url "users:detail" post.user.username %}"">{{post.user.get_full_name}}</a></h3></div>
+      <div class="col s3"><h6 class="text-center"><a href="{% url "posts:detail" post.pk %}">{{ post.title }}</a></h6></div>
+      <div class="col s3"><h3 class="text-right"><a href="{% url "users:detail" post.user.username %}">{{post.user.get_full_name}}</a></h3></div>
   </div>
   <div class="card mb-4 box-shadow">
     <img style="width: 100%;" src="{{ post.photo.url }}" alt="{{ post.title }}">
       <div class="card-body">
-        <p class="card-text">{{ post.description }}</p>
-        <a href="{% url "posts:detail" post.pk %}" style="color: #000; font-size: 20px;">
+        <a href="#" style="color: #000; font-size: 20px;">
             <i class="far fa-hand-rock"></i>
-        </a> 3000
+        </a> 62 Personas apoyando
+        <p class="card-text">{{ post.description }}</p>
+
         <p></p>
         <div>
         <h2>COMENTARIOS<h2>
         </div>
         <p>Esta increible esa idea, no crei que eso pasara en colombia</p>
-        <textarea class="form-control counted" name="message" placeholder="Digite uma mensagem" rows="5" style="margin-bottom:10px;"></textarea>
-        <h6 class="pull-right" id="counter">320 characters remaining</h6>
+        <textarea class="form-control counted" name="message" placeholder="Deje su comentario" rows="5" style="margin-bottom:10px;"></textarea>
         <button class="btn btn-info" type="submit">Comentar</button>
         <div class="d-flex justify-content-between align-items-center">
         <small class="text-muted">{{ post.city }}</small>
