--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -15,7 +15,7 @@
 
 
         <button class="btn btn-secondary btn-block mt-5" type="submit">Register!</button>
-        <a class="btn btn-primary btn-block" href="{% provider_login_url "facebook" method="oauth2" %}">
+        <a class="btn btn-primary btn-block" href="#"facebook" method="oauth2" %}">
             <span class="fab fa-facebook"></span>
             Signup with facebook
         </a>
